syntax = "proto2";


option java_multiple_files = true;
option java_package = "com.yingshibao.app.idl";

import public "module.proto";

package yingshibao;

/* 用户管理相关服务 */
service UserManager {
	// 注册新用户
	rpc registerNewUser(UserInfo) returns (RegisterResult) {}
}

/** 
 * 服务器端调用客户端的服务
 */
service Push {
	// 通知弹幕消息
	rpc pushBarrage(Barrage) returns (None) {}
}

/* 课程管理相关服务 */
service CourseManager {
	// 拉取课程列表
	rpc getCourseList(CourseType) returns (CourseList) {}
}

// 用户注册请求信息
message UserInfo {
	/* 
     * 昵称
     */
	required string nickName = 1; 
	
	// 学校名称
	optional string schoolName = 2; 
	
	// 手机号码
	required string phone = 3; 
	
	// 考试类型 
	required uint32 examType = 4; // 1:四级英语 2:六级英语 3:考研英语 4:考研政治 5:考研数学 6:高考
	
	// 用户来源渠道
	required string channelName = 5;
}

// 用户注册响应信息
message RegisterResult {
	// 错误信息，如果注册成功为null；如果发生错误，存放导致错误的原因。
	required string errorMessage = 1; 
	
	// 用户ID，注册成功时存放服务器生成的userId。
	optional int32 userId = 2;
	
	// sessionId，注册成功时自动登录了，存放服务器生成的sessionId。
	optional string sessionId = 3;
}

// 弹幕消息
message Barrage {
	// 发弹幕用户昵称
	required string senderNickname = 1;

	// 弹幕消息
	required string message = 2;
}

// 空消息
message None {
}

// 引用import的message
message ImportMessage {
	optional CourseInfo courseInfo = 1;
	optional CourseList courseList = 2;
}
